--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,12 @@ jobs:
         
       - name: Indo para para pasta dev-repo-web
         run: cd dev-repo-web
+        shell: bash
         
       - name: Instalando as dependências
         run: npm install
+        shell: bash
 
       - name: Rodando testes unitários
         run: npm test
+        shell: bash
