--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
+      - name: Vai até a pasta dev-repo-server
+        run: cd dev-repo-server
         
       - name: Indo para para pasta dev-repo-web
         run: ls -la
