--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,11 @@
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  test_front:
+  test_back:
     runs-on: ubuntu-latest
     steps:
       - name: Verifica o repositório do Git
@@ -11,6 +15,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
-      - name: Executando testes no servidor
+      - name: Executando testes no Back End
         run: cd ./dev-repo-server && npm install && npm test
-    
+  test_front:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Executando testes no front End
+        run: cd ../dev-repo-web && npm install && npm test
+      
