--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Executando testes no front End
-        run: cd ../dev-repo-web && npm install && npm test
+        run: cd ./dev-repo-web && npm install && npm test
       
